EasyPK CHANGELOG
----------------

dev:
+  Use pigz (parallel implementation of GZip) if installed
+  Use pbzip2 (parallel bzip2) if installed
+  Use pixz (parallel xz) if installed

2.5:
+  Add support for xz archives
+  Strip trailing slash from filenames when forming archive's name
+  Signal processing added (now scripts normally terminate with Ctrl+C)
+  Force delete when -d is specified
+  Do not replace existing files with unpacked ones, raise an error and quit
   with exit code 4 instead (keeping unpacked files in temporary directory so
   user can take them wherever he/she wants)
+  Make temporary directories hidden and prefixed with "EasyPK" so user can
   guess what's in it
+  Fixed exit codes in pk (if -d wasn't specified, pk returned 1)
+  Removed fancy formatting from pk's warnings (no more Unicode quote marks)

2.4:
+  Switched from zip to 7zip for handling zip archives (reason is stupid zip's
   command line interface)
+  unpk now have better logic (I took idea from atools): now archive unpacks to
   temporary directory first (it's named as base64 of PID of script), then
   checks for amount of files in directory. If there is just one file, it will
   be moved to directory where archive located. If there are few files,
   temporary directory will be renamed to name of archive without extension (say
   if there is "books.tar.bz2", directory will be named "books")
+  -d option added
+  Check for output file existion in pk added. If archive already exist, ask
   user if he want file to be overwritten
+  Scripts show archive name when processing it
+  Support for tgz, tbz2 and tar.bz2 extensions added to unpk;
   pk now understand "tbz2" as file format specificator
+  Man pages written
+  bug fixes

2.3:
+  setOutFilenames procedure added, few dozens of code lines saved :)
+  pk now can process spaces in directory names when creating archive names
   from it (yeah, it's more like that it's just a bug fix :)
+  Minor bug fixes.

2.2: