@@ -1,7 +1,35 @@
 PREFIX = /usr
 MANPREFIX = ${PREFIX}/share/man
 
-install:
+check-dependencies:
+	@echo -n 'checking for tar... '
+	@echo `command -v tar || echo 'not found'`
+
+	@echo -n 'checking for pv... '
+	@echo `command -v pv || echo 'not found (no progressbar for you)'`
+
+	@echo -n 'checking for gzip... '
+	@echo `command -v gzip || echo 'not found'`
+
+	@echo -n 'checking for pigz... '
+	@echo `command -v pigz || echo 'not found'`
+
+	@echo -n 'checking for bzip2... '
+	@echo `command -v bzip2 || echo 'not found'`
+
+	@echo -n 'checking for pbzip2... '
+	@echo `command -v pbzip2 || echo 'not found'`
+
+	@echo -n 'checking for xz... '
+	@echo `command -v xz || echo 'not found'`
+
+	@echo -n 'checking for pixz... '
+	@echo `command -v pixz || echo 'not found'`
+
+	@echo -n 'checking for 7zip... '
+	@echo `command -v 7z || echo 'not found'`
+
+install: check-dependencies
 	@echo installing executable files to ${PREFIX}/bin
 	@mkdir --parents ${PREFIX}/bin
 	@cp --force pk ${PREFIX}/bin/
